syntax = "proto3";

package restaurant;

option go_package = "./";

message Restaurants {
  repeated Restaurant restaurants= 1;
  string error = 2;
}

message RecommendedRestaurants {
  repeated Restaurant restaurants = 1;
  repeated Tags tags = 2;
  string error = 3;
}

message RestaurantsTagsPromo {
  repeated Restaurant restaurants = 1;
  repeated Tags tags = 2;
  repeated Promocode promocode = 3;
  string error = 4;
}

message Promocode {
  string name = 1;
  string desc = 2;
  string img = 3;
  string code = 4;
  int64 rest_id = 5;
}

message Restaurant {
  int64 id = 1;
  string img = 2;
  string name = 3;
  int64 cost_for_free_delivery = 4;
  int64 min_delivery = 5;
  int64 max_delivery = 6;
  float rating = 7;
}

message RestaurantId {
  int64 id = 1;
  int64 idClient = 2;
}

message RestaurantClientId {
  int64 idRestaurant = 1;
  int64 idClient = 2;
}

message RestaurantInfo {
  int64 id = 1;
  string  img = 2;
  string  name = 3;
  int64 cost_for_free_delivery = 4;
  int64 min_delivery = 5;
  int64 max_delivery = 6;
  float rating = 7;
  bool favourite = 8;
  repeated Tags tags = 9;
  repeated Menu menu = 10;
  string error = 11;
}

message Menu {
  string name = 1;
  repeated DishesMenu dishes = 2;
}

message DishesMenu {
  int64 id = 1;
  string name = 2;
  int64 cost = 3;
  int64 ccal = 4;
  string img = 5;
}

message Tags {
  int64 id = 1;
  string name = 2;
}

message DishInfo {
  int64 restaurant_id = 1;
  int64 dish_id = 2;
}

message Empty { }

message Dishes {
  int64 id = 1;
  string img = 2;
  string name = 3;
  int64 cost = 4;
  int64 ccal = 5;
  string description = 6;
  repeated Radios  radios = 7;
  repeated Ingredients ingredients = 8;
  string error = 9;
}

message Radios {
  string name = 1;
  int64 id = 2;
  repeated CheckboxesRows rows = 3;
}

message CheckboxesRows {
  int64 id = 1;
  string name = 2;
}

message Ingredients {
  int64 id = 1;
  string name = 2;
  int64 cost = 3;
}

message DishesHostArray {
  DishesHost dishes = 1;
}

message DishesHost {
  int64 id = 1;
  string name = 2;
  int64 cost = 3;
  int64 ccal = 4;
  string description = 5;
  int64 protein = 6;
  int64 falt = 7;
  int64 carbohydrates = 8;
  int64 weight = 9;
  string category_dishes = 10;
  string category_restaurant = 11;
  int64 count = 12;
  repeated CreateRadios radios = 13;
  repeated CreateIngredients ingredients = 14;
  string error = 15;
}

message CreateRadiosArray {
  CreateRadios radios = 1;
  int64      dishId = 2;
}

message CreateRadios {
  string name = 1;
  int64 id = 2;
  repeated CreateElementRadios rows = 3;
  string error = 4;
}

message CreateElementRadios {
  int64 id = 1;
  string name = 2;
  int64 protein = 3;
  int64 falt = 4;
  int64 carbohydrates = 5;
  string error = 6;
}

message CreateIngredientsArray {
  CreateIngredients ingredients = 1;
  int64      dishId = 2;
}

message CreateIngredients {
  int64 id = 1;
  string name = 2;
  int64 cost = 3;
  int64 protein = 4;
  int64 falt = 5;
  int64 carbohydrates = 6;
  int64 count = 7;
  string error = 8;
}

message NewReview {
  RestaurantInfo restaurant = 1;
  string text = 2;
  int64 rate = 3;
  int64 id = 4;
}

message Error {
  string error = 1;
}

message SearchRestaurantText {
  string text = 1;
}

message ResReview {
  int64 id = 1;
  string  img = 2;
  string  name = 3;
  int64 cost_for_free_delivery = 4;
  int64 min_delivery = 5;
  int64 max_delivery = 6;
  float rating = 7;
  bool status = 8;
  repeated Review review = 9;
  repeated Tags tags = 10;
  string error = 11;
}

message Review {
  string name = 1;
  string text = 2;
  string date = 3;
  string time = 4;
  int64 rate = 5;
}

message UserId {
  int64 id = 1;
}

message EditRestaurantInFavoriteRequest {
  int64 id_restaurant = 1;
  int64 id_client = 2;
}

message ResponseEditRestaurantInFavorite {
  bool status = 1;
  string error = 2;
}

message DishId {
  int64 id = 1;
}

service RestaurantService {
  rpc AllRestaurants(Empty) returns (RestaurantsTagsPromo);
  rpc GetRecommendedRestaurants(Empty) returns (RecommendedRestaurants);
  rpc GetRestaurant(RestaurantId) returns (RestaurantInfo);
  rpc RestaurantDishes(DishInfo) returns (Dishes);
  rpc CreateReview(NewReview) returns (Error);
  rpc GetReview(RestaurantClientId) returns (ResReview);
  rpc SearchRestaurant(SearchRestaurantText) returns (Restaurants);
  rpc GetFavoriteRestaurants(UserId) returns (Restaurants);
  rpc EditRestaurantInFavorite(EditRestaurantInFavoriteRequest) returns (ResponseEditRestaurantInFavorite);
  rpc deleteDish(DishId) returns (Error);
  rpc AddDish(DishId) returns (Error);
  rpc AddRadios(DishId) returns (Error);
  rpc AddIngredient(DishId) returns (Error);
  rpc UpdateDish(DishId) returns (Error);
  rpc UpdateIngredient(DishId) returns (Error);
  rpc UpdateRadios(DishId) returns (Error);
}
